# dynamic_ipython

./: .dir-locals.el  .gitattributes  .gitconfig  .gitignore  .noseids  .pdbrc  .style.yapf  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.rst  __about__.py  __init__.py  _config.yml  anaconda-project.yml  appveyor.yml  environment_linux.txt  environment_windows.yaml  environment_windows.yml  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox-generated.ini  tox.ini  why.ipy  why.sh
.github/: dependabot.yml
.github/workflows/: greetings.yml  pythonpackage.yml
.vim/: coc-settings.json
conda-meta/: bld.bat  conda_build_config.yaml  index.html  meta.yaml
conda-meta/noarch/: index.html
condameta/: meta.yaml.template
condameta/noarch/: index.html
debugger/: __init__.py  ipdb  pdbrc
default_profile/: .gitignore  IDLE.cfg  __about__.py  __init__.py  ipd.py  ipython_config.py  ipython_kernel_config.py  pdbrc  pdbrc.py  pyreadlineconfig.ini  pythonwin_default.cfg  rlipython.py  site-customize.py  site_customize.py
default_profile/extensions/: __init__.py  cwd_prompt.py  envvar.py  event_watcher_example.py  example.py  extension_inspect.py  job_control.py  load_ext.py  miniconda.ipy  miniconda.py  namespace_new.py  namespaces.py  pd_csv.py  repr_requests.py  storemagic.py  termux_clipboard.py
default_profile/profile_debugger/: __init__.py  __main__.py  debug.py  ipd.py  ipdb.ipy  ipdb3.py  pdbrc  pdbrc.py  pythonrc.py
default_profile/profile_newterm/: .gitignore  __init__.py  _distributor_init.py  ipython_config.py  session.py  storeandloadmagics.py  unimpaired.py
default_profile/profile_parallel/: __init__.py  ipcluster_config.py  ipcontroller_config.py  ipengine_config.py
default_profile/sphinxext/: __init__.py  configtraits.py  custom_doctests.py  ipython_directive.py  magics.py  make.py  sphinx_ipy_directive.py  test_make.py
default_profile/startup/: 01_rehashx.py  02_paths.py  04_easy_import.py  05_log.py  06_help_helpers.py  10_envvar.py  11_clipboard.py  20_aliases.py  20_aliases.py.63d8e36be822576e346bc553e87564c8.py  21_fzf.py  22_alias_manager.py  23_git_commands.py  30_readline.py  31_yank_last_arg.py  32_kb.py  33_bottom_toolbar.py  34_completion.py  35_lexer.py  36_ptutils.py  41_numpy_init.py  42_pandas_init.py  43_matplotlib.py  50_sysexception.py  __init__.py  __main__.py  all_fault_handlers.py  bottom_toolbar.py  clipboard.py  completions.py  documenters.py  event_loops.py  file_logger.py  fzf.py  git_.py  interpreter.py  kb.py  lexer.py  ptoolkit.py  pygit.py  readline_.py  (+4 more)
default_profile/util/: 41_numpy_init.py  43_matplotlib.py  __init__.py  base16.py  colors.py  command_chain.py  copytree.py  dir_comparisons.py  ipython_get_history.py  iter_tools.py  machine.py  module_log.py  nb_stripper.py  pager2.py  paths.py  profile_override.py  timer.py  trio_testing.py
docs/: .gitignore  API.html  API.rst  Makefile  __init__.py  basic_customization.html  colorschemes.html  conf.py  custom_doctests.html  custom_keyboard_shortcuts.html  custom_magics.html  custom_magics.rst  debuggers.html  default_profile.html  default_profile.sphinxext.html  defaultprofile.rst  dev.html  directive.html  directive.rst  exceptions.html  ext.html  extensions.html  genindex.html  index.html  index.rst  ipython.html  ipython_directive.html  ipython_interactive_shell.html  ipython_interactive_shell.rst  ipython_keybindings.html  jobcontrol.html  jupyter.html  kernel.html  lexer.html  magics.html  make.bat  make.py  modules.html  package.json  profile_default.html  (+21 more)
docs/_modules/: 01_rehashx.html  04_easy_import.html  05_log.html  06_help_helpers.html  20_aliases.html  42_pandas_init.html  50_sysexception.html  default_profile.html  index.html
docs/_sources/: API.rst.txt  basic_customization.rst.txt  custom_keyboard_shortcuts.rst.txt  custom_magics.rst.txt  debuggers.rst.txt  default_profile.rst.txt  default_profile.sphinxext.rst.txt  dev.rst.txt  directive.rst.txt  exceptions.rst.txt  extensions.rst.txt  index.rst.txt  ipython.rst.txt  ipython_directive.rst.txt  ipython_interactive_shell.rst.txt  ipython_keybindings.rst.txt  jobcontrol.rst.txt  jupyter.rst.txt  kernel.rst.txt  lexer.rst.txt  magics.rst.txt  modules.rst.txt  profile_default.rst.txt  profile_default.util.rst.txt  prompt_toolkit.rst.txt  rich_output.rst.txt  sphinx_options.rst.txt  todo.rst.txt  (+5 more)
extensions/: README.rst  __init__.py  _repr_requests.py  conda.py  easy_import.py  event_watcher_example.py  example.py  extension_inspect.py  load_ext.py  pd_csv.py  site_pkgs.py  termux_clipboard.py
jupyter/: jupyter_labextension_config.py  jupyter_notebook_config.py  jupyter_qtconsole_config.py
jupyter_conf/: __init__.py  jupyter_console_config.py  jupyter_contrib_config.py  jupyter_contrib_nbextension_config.py  jupyter_labextension_config.py  jupyter_nbconvert_config.json  jupyter_nbconvert_config.py  jupyter_notebook_config.json  jupyter_notebook_config.py  jupyter_qtconsole_config.py  jupyter_serverextension_config.py  jupyternbextensions_configurator_config.py  package.json
profile_debugger/: __init__.py  ipdb.ipy  pdbrc
profile_default/: 02_paths.py  README.rst  __about__.py  __init__.py  ipython_config.py  ipython_kernel_config.py
profile_parallel/: __init__.py  ipcluster_config.py  ipcontroller_config.py  ipengine_config.py  ipython_config.py  ipython_kernel_config.py
test/: .gitignore  .noseids  README.rst  __init__.py  __main__.py  conftest.py  run_test.bat  test_00_ipython.py  test_10_envvar.py  test_20_aliases.py  test_all_fault_handlers.py  test_bottom_toolbar.py  test_ipython_parser.py  test_iterators.py  test_make.py  test_pdbrc.py  test_repralias.py  test_setenv.py  test_system_aliases.py  test_userdict.py  test_using_pytest.py
tools/: anaconda-project.yml  ctagOptions  ctagOptions.cnf  ctagsOptions.cnf  dynamic_ipython.code-workspace  environment.yml  environment_linux.txt  environment_windows.yml  matplotlibrc  meta.yaml  nb_stripper.py  requirements.txt  requirements_dev.txt  style.yapf.ini  tox.ini  universal_ctags.ctags
(+548 files in other folders)
