# [build-system]
# requires = [
#   "pip >= 19.3.1",
#   "setuptools >= 41.4.0",
# pyperclip>=1.8.0,
# ipykernel>=5.2.0,
# pygments>=2.6.1,
# matplotlib>=3.2.1,
# ipython>=7.13.0,
# nose>=1.3.7,
# numpydoc,
# pytest>=5.4.1,
# Sphinx>=3.0.3,
# testpath,
# flake8,
# ]

# Wowwwww " isn't considered a quote???

# WHAT THE HELL
# >>> import inspect, pprint, toml
# >>> toml.load('pyproject.toml')
# Traceback (most recent call last):
#   File "<stdin>", line 1, in <module>
#   File "C:\Users\fac\.virtualenvs\dynamic_ipython-BYhWmG8z\lib\site-packages\toml\decoder.py", line 112, in load
#     return loads(ffile.read(), _dict, decoder)
#   File "C:\Users\fac\.virtualenvs\dynamic_ipython-BYhWmG8z\lib\site-packages\toml\decoder.py", line 225, in loads
#     raise TomlDecodeError("Found invalid character in key name: '" +
# toml.decoder.TomlDecodeError: Found invalid character in key name: '''. Try quoting the key name. (line 21 column 3 char 324)

# Yup thats where i give up

# [tool.black]
# - 'skip-string-normalization' = False

# # better to keep default line-length than to match flake8
# - 'exclude' = '''
# (   # exclude entire contents of these top level directories...
#     /(  \.eggs
#      |  \.git
#      |  \.hg
#      |  \.mypy
#      |  _cache
#      |  \.nox
#      |  \.tox
#      |  \.venv
#      |  _build
#      |  buck-out
#      |  build
#      |  dist
#      )/

# )
# |
# (
#     # and these additional random rules
#     /(  __pycache__
#      |  \.circleci
#      |  \.github
#      |  \.vscode
#      |  \.pytest_cache
#      |  tests
#      )/
# )
# '''
