# setup.cfg

[flake8]

verbose = 3
max-line-length = 120
ignore =

	E251   # Pep8 specifies you SHOULD leave space around operators
	E202   # whitespace between var and brackets ) } and ]
	E265   # comments error. way too subjective.
	E266   # too many leading #'s in a comment
	E302   # Guido doesn't even do this.
	E402,  # module level import not at top of file

	F401   # Goes off when setting up user namespace

	RST303
	RST304  # Unrecognized directive which is like always
	RST305

	D101
	D102
	D105
	D107

exclude =

	docs/sphinxext/**,
	docs/build/**,
	build/**,
	dist/**,
	node_modules/**,
	.tox/**,

filename =

    docs/source/**.rst
    default_profile/**.py


[flake8-rst]

max-line-length = 120
ignore = E402,  # module level import not at top of file
include = docs/source/*.rst
doctests = true
summarize = true

[bdist_wheel]

universal = 1

[metadata]

license_file = LICENSE

[nosetests]

cover-package = nose
where = .
py3where = .
exe = True

[pydocstyle]

max-line-length = 120
ignore =

	D203, D212, D213 and D404. # defaults

convention = numpy

[pylint]

max-line-length = 120

ignore = C0103

exclude =
    build
    dist
    docs/build
    .tox
    .pytest*
    tools


[aliases]

dev = build -j4
