[flake8]

max-line-length = 120
ignore =
        E251   # Pep8 specifies you SHOULD leave space around operators
        E202   # whitespace between var and brackets ) } and ]
        E265   # comments error. way too subjective.
        E266   # too many leading #'s in a comment
        E302   # Guido doesn't even do this.
        E402,  # module level import not at top of file

        F401   # Goes off when setting up user namespace

        RST303
        RST304 # Unrecognized directive which is like always
        RST305

        D100   # public module
        D101
        D102
	D103   # public function
        D104   # public package
        D105
        D107

exclude =
        docs/sphinxext/**,
        docs/build/**,
        build/**,
        dist/**,
        node_modules/**,
        .tox/**,

filename =
    docs/source/**.rst
    default_profile/**.py

enable_extensions=flake8-rst,rst-docstrings,flake8-docstrings,mccabe


[flake8-rst]
max-line-length = 120
ignore = E402,  # module level import not at top of file
include = docs/source/*.rst
doctests = true
summarize = true

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
Requires-Dist: pywin32 >1.0; sys_platform == 'win32'
# https://www.python.org/dev/peps/pep-0345/#platform-multiple-use
# A Platform specification describing an operating system supported by the
# distribution which is not listed in the "Operating System" Trove
# classifiers. See "Classifier" below.#
platform="any",
dist_version = 0.0.2

[nosetests]
cover-package = nose
where = .
py3where = .
exe = True

[pydocstyle]
convention = numpy
add-ignore = D101, D102, D105, D107, D203 

[pylint]
max-line-length = 120
ignore = C0103
exclude =
    build
    dist
    docs/build
    .tox
    .pytest*
    tools


[aliases]
dev = build -j4

